<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingVertical="14dp"
    android:paddingHorizontal="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/back"
            android:layout_height="match_parent"
            android:layout_width="24dp"
            android:contentDescription="@string/back"
            android:src="@drawable/back"
            android:layout_marginEnd="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/settings"
        android:textColor="@color/text_black"
        android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/dark_theme"
                android:textColor="@color/text_black"
                android:textSize="22sp" />
            <Switch
                android:layout_width="wrap_content"
                android:layout_weight="0"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/shared"
                android:layout_weight="1"
                android:textColor="@color/text_black"
                android:textSize="22sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:contentDescription="@string/shared"
                android:src="@drawable/shared" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/support"
                android:textColor="@color/text_black"
                android:textSize="22sp" />
            <ImageView
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_weight="0"
                android:contentDescription="@string/support"
                android:src="@drawable/support" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/user_agreement"
                android:textColor="@color/text_black"
                android:textSize="22sp" />
            <ImageView
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:layout_weight="0"
                android:contentDescription="@string/user_agreement"
                android:src="@drawable/agreement" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>